--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                         </thead>
                         <tbody>
                             {% for planet in planets %}
-                                <tr class="planet-row" data-name="{{ planet.get('pl_name', 'Planeta') }}">
+                                <tr class="planet-row" data-index="{{ loop.index0 }}" data-name="{{ planet.get('pl_name', 'Planeta') }}">
                                     {% for column in table_columns %}
                                         <td>{{ planet.get(column.key, '') }}</td>
                                     {% endfor %}
@@ -84,6 +84,10 @@
                             <dt>Prediccion</dt>
                             <dd id="planet-prediction">-</dd>
                         </div>
+                        <div>
+                            <dt>Incertidumbre</dt>
+                            <dd id="planet-uncertainty">-</dd>
+                        </div>
                     </dl>
                 </div>
             </div>
@@ -92,4 +96,3 @@
     </main>
 </body>
 </html>
-
