--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Observatorio de Exoplanetas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js" defer></script>
+    <script src="{{ url_for('static', filename='js/three.min.js') }}" defer></script>
     <script>
         window.PLANETS_PAYLOAD = {{ visual_payload | safe }};
     </script>
@@ -96,3 +96,5 @@
     </main>
 </body>
 </html>
+
+
