--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,13 @@
                         </select>
                     </div>
                 </div>
+                {% if mission_description %}
+                <div class="mission-description">
+                    {% for paragraph in mission_description %}
+                    <p>{{ paragraph }}</p>
+                    {% endfor %}
+                </div>
+                {% endif %}
                 <button type="submit">Process file</button>
             </form>
             {% with messages = get_flashed_messages() %}
