--- a/templates/index.html
+++ b/templates/index.html
@@ -102,10 +102,12 @@
                     <button type="button" class="compare-earth-btn" aria-pressed="false">Show Earth comparison</button>
                     <div class="earth-comparison" hidden>
                         <div class="earth-comparison__figure">
-                            <div class="earth-comparison__planet" data-role="planet">
+                            <div class="earth-comparison__item">
+                                <div class="earth-comparison__planet" data-role="planet"></div>
                                 <span class="earth-comparison__label">Selected planet</span>
                             </div>
-                            <div class="earth-comparison__earth" data-role="earth">
+                            <div class="earth-comparison__item">
+                                <div class="earth-comparison__earth" data-role="earth"></div>
                                 <span class="earth-comparison__label">Earth</span>
                             </div>
                         </div>
